--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Piráti jižní čechy
-email: @pirati.cz
+email: lukas.kolarik@pirati.cz
 description: > # this means to ignore newlines until "baseurl:"
     Piráti Jihočeský kraj
 baseurl: "" # the subpath of your site, e.g. /blog  http://stackoverflow.com/questions/16316311/github-pages-and-relative-paths/19173888#19173888
