not necessary baseurl kicked out

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Piráti jižní čechy
 email: lukas.kolarik@pirati.cz
 description: > # this means to ignore newlines until "baseurl:"
     Piráti Jihočeský kraj
-baseurl: "/jihocesky.pirati.cz" # the subpath of your site, e.g. /blog  http://stackoverflow.com/questions/16316311/github-pages-and-relative-paths/19173888#19173888
+baseurl: "" # "/jihocesky.pirati.cz" # the subpath of your site, e.g. /blog  http://stackoverflow.com/questions/16316311/github-pages-and-relative-paths/19173888#19173888
 url: "https://jihocesky.pirati.cz" # the base hostname & protocol for your site
 
 mailchimp:
