--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "_includes/shared"]
 	path = _includes/shared
 	url = https://github.com/pirati-web/partials
+[submodule "_layouts"]
+	path = _layouts
+	url = https://github.com/pirati-web/layouts
