upravy. Jejich moc, sem linej na commit msg

--- a/_data/kandidatka.yml
+++ b/_data/kandidatka.yml
@@ -5,8 +5,8 @@
   town: Písek
   member: Piráti
   bio: neco
-  profilelink: https://www.pirati.cz/lide/lukas_kolarik
-  photo: https://www.pirati.cz/_media/lide/img_7362.jpg?w=200
+  profilelink: https://www.pirati.cz/lide/michal_horak
+  photo: https://www.pirati.cz/_media/lide/michal_horak.jpg?w=200
 -
   name: Lukáš Kolářík
   age: 32
@@ -23,8 +23,8 @@
   town: Týn nad Vltavou
   member: Piráti
   bio: neco
-  profilelink: https://www.pirati.cz/lide/lukas_kolarik
-  photo: https://www.pirati.cz/_media/lide/img_7362.jpg?w=200
+  profilelink: https://www.pirati.cz/lide/jan_novak
+  photo: https://www.pirati.cz/_media/lide/jan_novak.jpg?w=200
 -
   name: Ljuba Poláková
   age: 39
@@ -32,8 +32,8 @@
   town: Nová Bystřice
   member: Piráti
   bio: neco
-  profilelink: https://www.pirati.cz/lide/lukas_kolarik
-  photo: https://www.pirati.cz/_media/lide/img_7362.jpg?w=200
+  profilelink: https://www.pirati.cz/lide/ljuba_polakova
+  photo: https://www.pirati.cz/_media/lide/ljuba_polakova.jpg?w=200
 -
   name: Martin Brož
   age: 34
