--- a/_data/kandidatka.yml
+++ b/_data/kandidatka.yml
@@ -221,8 +221,8 @@
   town: Písek
   member: Piráti
   bio: neco
-  profilelink: https://www.pirati.cz/lide/vaclav_klecanda
-  photo: https://www.pirati.cz/_media/lide/vaclav_klecanda.jpg?w=300
+  profilelink: https://www.pirati.cz/lide/petr_sousek
+  photo: https://www.pirati.cz/_media/lide/petr_sousek.jpg?w=300
 -
   name: Filip Houdek
   age: 32
