--- a/_data/kandidatka.yml
+++ b/_data/kandidatka.yml
@@ -6,7 +6,7 @@
   member: Piráti
   bio: neco
   profilelink: https://www.pirati.cz/lide/michal_horak
-  photo: https://www.pirati.cz/_media/lide/michal_horak.jpg?w=200
+  photo: https://www.pirati.cz/_media/lide/img_1127.jpg?w=200
 -
   name: Lukáš Kolářík
   age: 32
@@ -221,8 +221,8 @@
   town: Písek
   member: Piráti
   bio: neco
-  profilelink: https://www.pirati.cz/lide/vaclav_klecanda
-  photo: https://www.pirati.cz/_media/lide/vaclav_klecanda.jpg?w=300
+  profilelink: https://www.pirati.cz/lide/petr_sousek
+  photo: https://www.pirati.cz/_media/lide/petr_sousek.jpg?w=300
 -
   name: Filip Houdek
   age: 32
